; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_ural.c_ural_disable_rf_tune.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_ural.c_ural_disable_rf_tune.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ural_softc = type { i64, i32* }

@RAL_RF_2523 = common dso_local global i64 0, align 8
@RAL_RF1 = common dso_local global i64 0, align 8
@RAL_RF1_AUTOTUNE = common dso_local global i32 0, align 4
@RAL_RF3 = common dso_local global i64 0, align 8
@RAL_RF3_AUTOTUNE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"disabling RF autotune\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ural_softc*)* @ural_disable_rf_tune to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ural_disable_rf_tune(%struct.ural_softc* %0) #0 {
  %2 = alloca %struct.ural_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.ural_softc* %0, %struct.ural_softc** %2, align 8
  %4 = load %struct.ural_softc*, %struct.ural_softc** %2, align 8
  %5 = getelementptr inbounds %struct.ural_softc, %struct.ural_softc* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @RAL_RF_2523, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %23

9:                                                ; preds = %1
  %10 = load %struct.ural_softc*, %struct.ural_softc** %2, align 8
  %11 = getelementptr inbounds %struct.ural_softc, %struct.ural_softc* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = load i64, i64* @RAL_RF1, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @RAL_RF1_AUTOTUNE, align 4
  %17 = xor i32 %16, -1
  %18 = and i32 %15, %17
  store i32 %18, i32* %3, align 4
  %19 = load %struct.ural_softc*, %struct.ural_softc** %2, align 8
  %20 = load i64, i64* @RAL_RF1, align 8
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @ural_rf_write(%struct.ural_softc* %19, i64 %20, i32 %21)
  br label %23

23:                                               ; preds = %9, %1
  %24 = load %struct.ural_softc*, %struct.ural_softc** %2, align 8
  %25 = getelementptr inbounds %struct.ural_softc, %struct.ural_softc* %24, i32 0, i32 1
  %26 = load i32*, i32** %25, align 8
  %27 = load i64, i64* @RAL_RF3, align 8
  %28 = getelementptr inbounds i32, i32* %26, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @RAL_RF3_AUTOTUNE, align 4
  %31 = xor i32 %30, -1
  %32 = and i32 %29, %31
  store i32 %32, i32* %3, align 4
  %33 = load %struct.ural_softc*, %struct.ural_softc** %2, align 8
  %34 = load i64, i64* @RAL_RF3, align 8
  %35 = load i32, i32* %3, align 4
  %36 = call i32 @ural_rf_write(%struct.ural_softc* %33, i64 %34, i32 %35)
  %37 = call i32 @DPRINTFN(i32 2, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ural_rf_write(%struct.ural_softc*, i64, i32) #1

declare dso_local i32 @DPRINTFN(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
